2011-03-29 Peter Spjuth   <peter.spjuth@gmail.com>
	* Locate built-in zlib before package. [FR 5261]

2010-09-17 Peter Spjuth   <peter.spjuth@gmail.com>
	* Added curve method to draw quadratic and cubic beziers.
	  (Ian Gay) [FR 5106]
	* Deprecated qCurve.

2010-01-29 Peter Spjuth   <peter.spjuth@gmail.com>
	* Release 0.7 (skipping 0.6 to not confuse with other 0.6)

2010-01-29 Peter Spjuth   <peter.spjuth@gmail.com>
	* Added tests for font loading
	* Corrected naming of bboxb/t metrics.
	* Changed height metric to measure full bbox height

2010-01-29 Peter Spjuth   <peter.spjuth@gmail.com>
	* Got font examples working.

2010-01-29 Peter Spjuth   <peter.spjuth@gmail.com>
	* Code standard cleanup.

2010-01-29 Peter Spjuth   <peter.spjuth@gmail.com>
	* Removed old packages "metrics" and "glyphnames".

2010-01-29 Peter Spjuth   <peter.spjuth@gmail.com>
	* Added last of YS font patch.

2010-01-29 Peter Spjuth   <peter.spjuth@gmail.com>
	* Removed AFM file reader.

2010-01-27 Peter Spjuth   <peter.spjuth@gmail.com>
	* More of Yaroslav Schekin's patch.
	* Added font argument to CleanText.
	* Added bboxt and bboxb font metrics.
	* Corrected size of background fill for text.
	* Support angle for background fill for text.

2010-01-01 Peter Spjuth   <peter.spjuth@gmail.com>
	* Added bookmarkAdd and metadata methods. (Kevin Partin) [FR 4842]

2009-12-16 Peter Spjuth   <peter.spjuth@gmail.com>
	* Added getImageHeight, getImageWidth, getImageSize methods.

2009-12-16 Peter Spjuth   <peter.spjuth@gmail.com>
	* Speed up of raw image handling. [Bug 16560]

2009-10-27 Peter Spjuth   <peter.spjuth@gmail.com>
	* Added -rotate document/page option. (Thanks to Martin Walcher)

2009-09-11 Peter Spjuth   <peter.spjuth@gmail.com>
	* Added getTextPosition method.

2009-09-11 Peter Spjuth   <peter.spjuth@gmail.com>
	* Initialise origxpos to avoid error. [Bug 15246]

2009-09-11 Peter Spjuth   <peter.spjuth@gmail.com>
	* addRawImage: Include Length field in addRawImage. [Bug 16264]
